--- a/navigation.html
+++ b/navigation.html
@@ -296,9 +296,9 @@
 	            <div class="bar"></div>
 	        </div>
 	        <ul class="navbar-items" id="navbarItems">
-	            <li><b><a style="color: #000000;" href="#about" class="navbar-item">🌐关于网站</a></b></li>
-	            <li><b><a style="color: #000000;" href="./other/HistoryWebpage/HistoryWebpage.html" class="navbar-item">🌐网站历史</a></b></li>
-	            <li><b><a style="color: #000000;" href="#contact" class="navbar-item">🌐赞助网站</a></b></li>
+                <li><b><a style="color: #000000;" onclick='return confirm("感谢您的支持！\nCZwiki 会持续优化，带来更多实用功能。\n这个网站正是出自陈哲威之手。\n若你好奇这个网站的用途，目前它还在不断完善中，未来可期。\n（其实我也不知道网站有什么用，闲暇时就手搓出来了。）");' class="navbar-item">🌐关于网站</a></b></li>
+                <li><b><a style="color: #000000;" href="./HistoryWebpage.html" class="navbar-item">🌐网站历史</a></b></li>
+                <li><b><a style="color: #000000;" href="./Sponsorship/Sponsorship.html" class="navbar-item">🌐赞助网站</a></b></li>
 	        </ul>
 	    </div>
 	</nav>
@@ -326,13 +326,13 @@
 
     <!-- 其他链接 -->
 	<div class="links">
-	    <a href="./other/FeiDian4cWeb.html">飞电4C网</a>
+	    <a href="./other/FeiDian4cWeb.html" target="_blank" >飞电4C网</a>
 	</div>
 
 	<div class="links">
-	    <a href="./other/ExtremelyHappyWeb.html">极乐网EHW</a>
-	    <a href="https://one.kbai.cc/cxk/10/">🐔乐盒</a>
-	    <a href="https://one.kbai.cc/cxk/8/">别踩🐔块</a>
+	    <a href="./other/ExtremelyHappyWeb.html" target="_blank" >极乐网EHW</a>
+	    <a href="https://one.kbai.cc/cxk/10/" target="_blank" >🐔乐盒</a>
+	    <a href="https://one.kbai.cc/cxk/8/" target="_blank" >别踩🐔块</a>
 	</div>
 
     <!-- 底部版权 -->
