--- a/other/ExtremelyHappyWeb.html
+++ b/other/ExtremelyHappyWeb.html
@@ -11,9 +11,10 @@
     <title>极乐网 - 改进版</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c" />
     <style>
         /* 全局样式 */
@@ -218,7 +219,7 @@
     <div class="container">
         <!-- 标题 -->
         <h1>〰️ 🔞 <b>极乐网</b> ❗️ 〰️️</h1>
-		<h3>请确保您<a style="color: #FF1493;">已满18周岁</a>否则请按左下角按键返回️️</h3>
+		<h3>请确保您<a style="color: #FF1493;">已满18周岁</a>否则请按左下角按键返回🔙️️</h3>
         <!-- 引言 -->
         <div class="section">
             <p>请确保已关闭或已调小音量🔇</p>
@@ -230,7 +231,9 @@
         <div class="section" style="background-color: rgba(255, 255, 255, 0.08);">
             <h2>🏅推荐🎗️</h2>
             <ul>
-                <li><a href="http://45.126.181.87/clforward.html" target="_blank" class="hover-effect">XZZ53</a></li>
+                <li>视频：<a href="https://266527.com/" target="_blank" class="hover-effect">乱伦社</a></li>
+                <li>图片：<a href="https://xerocos.com/" target="_blank" class="hover-effect">Xerocos</a></li>
+
             </ul>
         </div>
 
@@ -238,25 +241,15 @@
         <div class="section video">
             <h2>🎥视频专区🎬</h2>
             <ul>
-                <li><a href="https://755964.com/" target="_blank" class="hover-effect">乱伦网</a></li>
-                <li><a href="http://45.126.181.87/clforward.html" target="_blank" class="hover-effect">XZZ53</a></li>
-                <li><a href="https://iramhfze03ufd5h.i.ind188.mmm135.55uupx.xyz/" target="_blank" class="hover-effect">5X视频</a></li>
-                <li><a href="" target="_blank" class="hover-effect"></a></li>
-                <li><a href="" target="_blank" class="hover-effect"></a></li>
-                <li><a href="https://yp1nalmgqujl.com:29875/" target="_blank" class="hover-effect">YOURPORN</a></li>
-                <li><a href="https://5x1688.xyz" target="_blank" class="hover-effect">5X视频网址</a></li>
-                <li><a href="" target="_blank" class="hover-effect"></a></li>
-                <li><a href="https://you.xxxxxxav1x135.xyz/t/24/" target="_blank" class="hover-effect">XXXX动画</a></li>
-                <li><a href="" target="_blank" class="hover-effect"></a></li>
-            </ul>
-        </div>
-
-        <!-- 漫画专区 -->
-        <div class="section comic">
-            <h2>📔漫画专区📖</h2>
-            <ul>
-                <li><a href="https://www.fangjidao.cn/" target="_blank" class="hover-effect">虚空漫画网</a></li>
-                <li><a href="" target="_blank" class="hover-effect"></a></li>
+                <li><a href="https://cn3.cw101.biz/hd" target="_blank" class="hover-effect">高清AVHD101</a></li>
+                <li><a href="https://kk2az.site/?sid=50128" target="_blank" class="hover-effect">8dgo视频</a></li>
+                <li><a href="https://8dgomv.site/?channel=-1&index=1" target="_blank" class="hover-effect">无限视频</a></li>
+                <li><a href="https://yibospae.buzz/" target="_blank" class="hover-effect">易勃视频</a></li>
+                <li><a href="https://5xsq.com" target="_blank" class="hover-effect">5X社区</a></li>
+                <li><a href="https://266527.com/" target="_blank" class="hover-effect">乱伦社</a></li>
+                <li><a href="https://www.xzk2s.com/home" target="_blank" class="hover-effect">不知名网站</a></li>
+                <li><a href="https://streets-bustle-daily.koxueyuan1qqq111.xyz/ko" target="_blank" class="hover-effect">51黑料福利社</a></li>
+                <li><a href="https://you.xxxxxxav1x135.xyz/xxxx" target="_blank" class="hover-effect">高清XXXX黑料</a></li>
             </ul>
         </div>
 
@@ -264,27 +257,28 @@
         <div class="section image">
             <h2>📷图片专区🖼️️</h2>
             <ul>
-                <li><a href="https://xxxxssss121.buzz/arttype/2000/" target="_blank" class="hover-effect">XXXX美图</a></li>
                 <li><a href="https://xerocos.com/" target="_blank" class="hover-effect">Xerocos</a></li>
+                <li><a href="https://xiunice.com/" target="_blank" class="hover-effect">Xiunice</a></li>
+                <li><a href="https://streets-bustle-daily.xofulitu1qqq111.xyz/xoxo" target="_blank" class="hover-effect">XO福利图</a></li>
+                <li><a href="https://www.sstuku45.xyz/bb/" target="_blank" class="hover-effect">色色图库</a></li>
             </ul>
         </div>
-
-        <!-- 小说专区 -->
-        <div class="section novel">
-            <h2>📚小说专区📝</h2>
+		
+        <!-- 漫画专区 -->
+        <div class="section comic">
+            <h2>📔漫画专区📖</h2>
             <ul>
-                <li><a href="https://you.xxxxxxav1x135.xyz/arttype/1000/" target="_blank" class="hover-effect">XXXX小说</a></li>
-                <li><a href="" target="_blank" class="hover-effect"></a></li>
+                <li><a href="https://aman3.com/" target="_blank" class="hover-effect">A漫网</a></li>
+                <li><a href="https://69manhua.org/" target="_blank" class="hover-effect">六九漫画网</a></li>
+                <li><a href="https://www.manhuazuixin.com/" target="_blank" class="hover-effect">最新韩漫网</a></li>
             </ul>
         </div>
-
         <!-- 其它 -->
         <div class="section other">
             <h2>🏷️其它💡</h2>
             <ul>
-                <li><a href="https://dl.8546512.com:4139/48/363889" target="_blank" class="hover-effect">禁漫天堂app下载</a></li>
-                <li><a href="https://pz.2sy91h.xyz/?ch=anyeav#/home" target="_blank" class="hover-effect">Pornhub下载</a></li>
-                <li><a href="https://iyue.f4ttd9j.cc/page.html?dc=brga20812" target="_blank" class="hover-effect">逼哩逼哩下载</a></li>
+                <li><a href="https://github.com/hect0x7/JMComic-APK/releases/download/1.7.6/1.7.6.apk" target="_blank" class="hover-effect">禁漫天堂官方链接下载</a></li>
+                <li><a href="https://github.com/xiaojieonly/Ehviewer_CN_SXJ/releases/download/1.9.9.8/EhViewer-1.9.9.8.apk" target="_blank" class="hover-effect">Ehviewer官方链接下载</a></li>
             </ul>
         </div>
     </div>
@@ -312,7 +306,7 @@
             // 如果停止滚动5秒后隐藏返回按钮
             scrollTimeout = setTimeout(function() {
                 returnButton.style.opacity = '0';
-            }, 5000);
+            }, 3000);
         }
     </script>
 	<h1>▫️▫️▫️▫️▫️️▫</h1>
