--- a/other/FeiDian4cWeb.html
+++ b/other/FeiDian4cWeb.html
@@ -1,9 +1,79 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>飞电4C网</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .header {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #ffffff;
+        }
+        .header img {
+            width: 50%; /* 根据需要调整图片大小 */
+            height: auto;
+        }
+        .profile {
+            display: flex;
+            align-items: flex-start; /* 调整为顶部对齐 */
+            margin: 20px 0;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .profile img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%; /* 头像为圆形 */
+            margin-right: 20px;
+        }
+        .profile .info {
+            flex: 1; /* 信息部分占据剩余空间 */
+        }
+        .profile h2 {
+            margin: 0 0 10px 0; /* 调整名字的间距 */
+            font-size: 18px;
+            color: #333; /* 名字字体颜色 */
+        }
+        .profile p {
+            margin: 0;
+            font-size: 14px;
+            color: #666; /* 动态内容字体颜色 */
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <img src="https://lining-goods-online-1302115263.file.myqcloud.com/data/lining/ARMU005-12/9a57c26371de6b66021588544606c4b8b997b96af161f35167b437dde879232bb38624078f777ed3.jpg" alt="飞电4C">
+    </div>
+    <div class="profile">
+        <img src="https://lining-goods-online-1302115263.file.myqcloud.com/data/lining/ARMU005-16/c97d3f0c8c7ee00bbe6fa221b4c0481c21a604e2f62b5bf51fbcc48c110e3a61b38624078f777ed3.jpg" alt="用户头像">
+        <div class="info">
+            <h2>ARMU005-16</h2>
+            <p>我是白色的飞电4C</p>
+        </div>
+    </div>
+    <div class="profile">
+        <img src="https://lining-goods-online-1302115263.file.myqcloud.com/data/lining/ARMU005-17/070dde194cb6974be96c925e91a33b149c04db988975877b39789dc65406c372b38624078f777ed3.jpg" alt="用户头像">
+        <div class="info">
+            <h2>ARMU005-17</h2>
+            <p>我是黑色的飞电4C</p>
+        </div>
+    </div>
+	<div class="profile">
+	    <img src="https://lining-goods-online-1302115263.file.myqcloud.com/data/lining/ARMU005-23/d537da6c45b44ba400fb323f330df8219ade35515bd75f443ff842c9fdea200fb38624078f777ed3.jpg" alt="用户头像">
+	    <div class="info">
+	        <h2>ARMU005-23</h2>
+	        <p>我是黄色的飞电4C</p>
+	    </div>
+	</div>
+</body>
 </html>
