--- a/HistoryWebpage.html
+++ b/HistoryWebpage.html
@@ -450,37 +450,37 @@
         <details>
             <summary><b>2.0版本</b></summary>
 			<ol>
-			    <li><a style="margin:20px" href="./2.0/2.1.1/index.html" target="_blank">V2.1.1</a>2025/2/14</li>
-			    <li><a style="margin:20px" href="./2.0/2.1.0/index.html" target="_blank">V2.1.0</a>2025/2/12</li>
-				<li><a style="margin:20px" href="./2.0/2.0.1/index.html" target="_blank">V2.0.1</a>2025/2/11</li>
-			    <li><a style="margin:20px" href="./2.0/2.0.0/index.html" target="_blank">V2.0.0</a>2024/5/14</li>
+			    <li><a style="margin:20px" href="./2.0-2.0.0-2.1.1/2.1.1/index.html" target="_blank">V2.1.1</a>2025/2/14</li>
+			    <li><a style="margin:20px" href="./2.0-2.0.0-2.1.1/2.1.0/index.html" target="_blank">V2.1.0</a>2025/2/12</li>
+				<li><a style="margin:20px" href="./2.0-2.0.0-2.1.1/2.0.1/index.html" target="_blank">V2.0.1</a>2025/2/11</li>
+			    <li><a style="margin:20px" href="./2.0-2.0.0-2.1.1/2.0.0/index.html" target="_blank">V2.0.0</a>2024/5/14</li>
 			</ol>
         </details>
 
         <details>
             <summary><b>1.0版本</b></summary>
 			<ol>
-			    <li><a style="margin:20px" href="./1.0/1.4.1/index.html" target="_blank">V1.4.1</a>2024/2/15</li>
-				<li><a style="margin:20px" href="./1.0/1.4.0/index.html" target="_blank">V1.4.0</a>2023/10/23</li>
-				<li><a style="margin:20px" href="./1.0/1.3.1/index.html" target="_blank">V1.3.1</a>2023/10/22</li>
-				<li><a style="margin:20px" href="./1.0/1.3.0/index.html" target="_blank">V1.3.0</a>2023/10/21</li>
-				<li><a style="margin:20px" href="./1.0/1.2.1/index.html" target="_blank">V1.2.1</a>2023/10/19</li>
-				<li><a style="margin:20px" href="./1.0/1.2.0/index.html" target="_blank">V1.2.0</a>2023/10/17</li>
-				<li><a style="margin:20px" href="./1.0/1.1.1/index.html" target="_blank">V1.1.1</a>2023/10/6</li>
-				<li><a style="margin:20px" href="./1.0/1.1.0/index.html" target="_blank">V1.1.0</a>2023/10/5</li>
-				<li><a style="margin:20px" href="./1.0/1.0.1/index.html" target="_blank">V1.0.1</a>2023/10/1</li>
-				<li><a style="margin:20px" href="./1.0/1.0.0/index.html" target="_blank">V1.0.0</a>2023/9/30</li>
+			    <li><a style="margin:20px" href="./1.0-1.4.0-1.4.1/1.4.1/index.html" target="_blank">V1.4.1</a>2024/2/15</li>
+				<li><a style="margin:20px" href="./1.0-1.4.0-1.4.1/1.4.0/index.html" target="_blank">V1.4.0</a>2023/10/23</li>
+				<li><a style="margin:20px" href="./1.0-1.3.0-1.3.1/1.3.1/index.html" target="_blank">V1.3.1</a>2023/10/22</li>
+				<li><a style="margin:20px" href="./1.0-1.3.0-1.3.1/1.3.0/index.html" target="_blank">V1.3.0</a>2023/10/21</li>
+				<li><a style="margin:20px" href="./1.0-1.0.0-1.2.1/1.2.1/index.html" target="_blank">V1.2.1</a>2023/10/19</li>
+				<li><a style="margin:20px" href="./1.0-1.0.0-1.2.1/1.2.0/index.html" target="_blank">V1.2.0</a>2023/10/17</li>
+				<li><a style="margin:20px" href="./1.0-1.0.0-1.2.1/1.1.1/index.html" target="_blank">V1.1.1</a>2023/10/6</li>
+				<li><a style="margin:20px" href="./1.0-1.0.0-1.2.1/1.1.0/index.html" target="_blank">V1.1.0</a>2023/10/5</li>
+				<li><a style="margin:20px" href="./1.0-1.0.0-1.2.1/1.0.1/index.html" target="_blank">V1.0.1</a>2023/10/1</li>
+				<li><a style="margin:20px" href="./1.0-1.0.0-1.2.1/1.0.0/W.html" target="_blank">V1.0.0</a>2023/9/30</li>
 			</ol>
         </details>
 		
 		<details>
 		    <summary><b>0.0版本</b></summary>
 			<ol>
-			    <li><a style="margin:20px" href="./0.0/0.2.1/index.html" target="_blank">V0.2.1</a>2023/9/29</li>
-			    <li><a style="margin:20px" href="./0.0/0.2.0/index.html" target="_blank">V0.2.0</a>2023/9/28</li>
-			    <li><a style="margin:20px" href="./0.0/0.1.1/index.html" target="_blank">V0.1.1</a>2023/8/21</li>
-				<li><a style="margin:20px" href="./0.0/0.1.0/index.html" target="_blank">V0.1.0</a>2022/12/13</li>
-				<li><a style="margin:20px" href="./0.0/0.0.1/index.html" target="_blank">V0.0.1</a>2022/9/7</li>
+			    <li><a style="margin:20px" href="./0.0-0.0.1-0.2.1/0.2.1/index.html" target="_blank">V0.2.1</a>2023/9/29</li>
+			    <li><a style="margin:20px" href="./0.0-0.0.1-0.2.1/0.2.0/index.html" target="_blank">V0.2.0</a>2023/9/28</li>
+			    <li><a style="margin:20px" href="./0.0-0.0.1-0.2.1/0.1.1/index.html" target="_blank">V0.1.1</a>2023/8/21</li>
+				<li><a style="margin:20px" href="./0.0-0.0.1-0.2.1/0.1.0/index.html" target="_blank">V0.1.0</a>2022/12/13</li>
+				<li><a style="margin:20px" href="./0.0-0.0.1-0.2.1/0.0.1/index.html" target="_blank">V0.0.1</a>2022/9/7</li>
 			</ol>
 		</details>
 					<h3>自站主第一次发布网页至现在已经👇👇<h3>
