--- a/navigation.html
+++ b/navigation.html
@@ -327,8 +327,8 @@
     <!-- 其他链接 -->
 	<div class="links">
 	    <a href="./other/FeiDian4cWeb.html" target="_blank" >飞电4C网</a>
+		<a href="./other/9+1shi/index.html" target="_blank" >垃圾堆</a>
 	</div>
-
 	<div class="links">
 	    <a href="./other/ExtremelyHappyWeb.html" target="_blank" >极乐网EHW</a>
 	    <a href="https://one.kbai.cc/cxk/10/" target="_blank" >🐔乐盒</a>
