--- a/navigation.html
+++ b/navigation.html
@@ -327,7 +327,8 @@
     <!-- 其他链接 -->
 	<div class="links">
 	    <a href="./other/FeiDian4cWeb.html" target="_blank" >飞电4C网</a>
-		<a href="./other/9+1shi/index.html" target="_blank" >垃圾堆</a>
+		<a href="./8000/9+1shi/index.html" target="_blank" >垃圾堆</a>
+		<a href="./8000/YYZ/index.html" target="_blank" >音乐桌</a>
 	</div>
 	<div class="links">
 	    <a href="./other/ExtremelyHappyWeb.html" target="_blank" >极乐网EHW</a>
