--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     font-size: 16px;
     font-weight: bold;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+    transition: transform 0.2 ease, box-shadow 0.2 ease, background 0.2 ease;
     margin-top: 20px;
 }
 
@@ -62,7 +62,7 @@
 
 .link-arrow {
     font-size: 18px;
-    transition: transform 0.2s ease;
+    transition: transform 0.2 ease;
 }
 
 .advanced-link:hover .link-arrow {
@@ -154,7 +154,7 @@
             text-decoration: none;
             margin: 0 15px;
             font-size: 1em;
-            transition: color 0.3s ease;
+            transition: color 0.3 ease;
         }
 
         .navbar-item:hover {
@@ -174,7 +174,7 @@
             height: 3px;
             background-color: white;
             margin: 4px 0;
-            transition: 0.4s;
+            transition: 0.4;
         }
 
         /* 汉堡菜单动画 */
@@ -206,7 +206,7 @@
             padding: 10px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
             width: 200px;
-            animation: fadeIn 0.3s ease;
+            animation: fadeIn 0.3 ease;
         }
 
         .navbar-items.expanded .navbar-item {
@@ -214,7 +214,7 @@
             text-align: left;
             padding: 10px;
             border-radius: 4px;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3 ease;
         }
 
         .navbar-items.expanded .navbar-item:hover {
@@ -508,18 +508,18 @@
         </h3>
         <hr />
         <h1><b>💾minecraft服务器</b>:</h1>
-		<p>游戏版本：<b>Java1.20.4💠</b></p>
+		<p>游戏版本：<b>Java1.21.10💠</b></p>
         <details>
             <summary><b>👉点击查看服务器地址👈</b></summary>
             <ol>
                 <li><a target="_blank" style="color: #2196f3;;font-size=20px">frp-off.com:13019</a></li>
 				<button onclick="copyToClip('frp-off.com:13019')">点击复制：frp-off.com:13019</button>
-				<li><a target="_blank" style="color: #2196f3;;font-size=20px">frp-act.com:35595</a></li>
-				<button onclick="copyToClip('frp-act.com:35595')">点击复制：frp-act.com:35595</button>
+				<li><a target="_blank" style="color: #2196f3;;font-size=20px">frp-art.com:52823</a></li>
+				<button onclick="copyToClip('frp-act.com:35595')">点击复制：frp-art.com:52823</button>
 				<li><a target="_blank" style="color: #2196f3;;font-size=20px">60.215.128.117:13019</a></li>
 				<button onclick="copyToClip('60.215.128.117:13019')">点击复制：60.215.128.117:13019</button>
-				<li><a target="_blank" style="color: #2196f3;;font-size=20px">122.228.26.226:35595</a></li>
-				<button onclick="copyToClip('122.228.26.226:35595')">点击复制：122.228.26.226:35595</button>
+				<li><a target="_blank" style="color: #2196f3;;font-size=20px">103.91.208.41:52823</a></li>
+				<button onclick="copyToClip('122.228.26.226:35595')">点击复制：103.91.208.41:52823</button>
             </ol>
 			<p>点击地址即可<b>复制</b>到剪贴板📋</p>
         </details>
@@ -715,7 +715,7 @@
 	    function i() {
 	        r.clearRect(0, 0, a, c);
 	        var n, e, t, o, m, l;
-	        s.forEach(function(i, x) {
+	        .forEach(function(i, x) {
 	            for (i.x += i.xa, i.y += i.ya, i.xa *= i.x > a || i.x < 0 ? -1 : 1, i.ya *= i.y > c || i.y < 0 ? -1 : 1, r.fillRect(i.x - .5, i.y - .5, 1, 1), e = x + 1; e < u.length; e++) n = u[e],
 	            null !== n.x && null !== n.y && (o = i.x - n.x, m = i.y - n.y, l = o * o + m * m, l < n.max && (n === y && l >= n.max / 2 && (i.x -= .03 * o, i.y -= .03 * m), t = (n.max - l) / n.max, r.beginPath(), r.lineWidth = t / 2, r.strokeStyle = "rgba(" + d.c + "," + (t + .2) + ")", r.moveTo(i.x, i.y), r.lineTo(n.x, n.y), r.stroke()))
 	        }),
@@ -749,12 +749,12 @@
 	        y.x = null,
 	        y.y = null
 	    };
-	    for (var s = [], f = 0; d.n > f; f++) {
+	    for (var  = [], f = 0; d.n > f; f++) {
 	        var h = w() * a,
 	        g = w() * c,
 	        v = 2 * w() - 1,
 	        p = 2 * w() - 1;
-	        s.push({
+	        .push({
 	            x: h,
 	            y: g,
 	            xa: v,
@@ -762,12 +762,13 @@
 	            max: 6e3
 	        })
 	    }
-	    u = s.concat([y]),
+	    u = .concat([y]),
 	    setTimeout(function() {
 	        i()
 	    },
 	    100)
 	} ();
+
 	</script>
 </body>
 
